Updated HTML file

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><img src="">Beans & Brews #1802</li>
         </ul>
     </nav>
+    <h3>Items in Cart</h3>
     <div class="row">
         <div class="col-4">
           <div class="list-group" id="list-tab" role="tablist">
@@ -30,7 +31,16 @@
                 <div><p>Description: 
                     We're proud to offer a cold brew with our signature High-Altitude Roasted beans brewed over twelve hours, resulting in a smooth, full-bodied tast with hints of cocoa and caramel.</p>
                 </div>
-                <div><h4>Size</h4></div>
+                <div><h5>Size</h5>
+                </div>
+                <div><h5>Extra Espresso Shots</h5>
+                    <p>Optional</p>
+                </div>
+                <div><h5>Milk Splash Options</h5>
+                <p>Optional- Select up to 4</p>
+                </div>
+                <div><h5>Add Sugar</h5></div>
+
             </div>
             <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">...</div>
             <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">...</div>
