--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
 </head>
 <body>
     <nav id="topNav">
-      <div><img src="" id="BBLogo">B&B Logo</div>
+      <div><img src="images/beans and brews logo.jpg" class="BBLogo"></div>
         <ul class="navItems">
-            <li>Main Menu</li>
-            <li><img src="">Tomorrow at 6:30pm</li>
-            <li><img src="">Beans & Brews #1802</li>
+            <li><a href="#">Main Menu</a></li>
+            <li><img src="images/clock.svg" class="icon">Tomorrow at 6:30pm<img src="images/arrow-right.svg"></li>
+            <li><img src="images/location.svg" class="icon">Beans & Brews #1802<img src="images/arrow-right.svg"></li>
         </ul>
     </nav>
-    <h3>Items in Cart</h3>
-    <div class="row">
+
+  <section id="cart">
+    <div class="col-4 cartTitle"><h3>Items in Cart</h3></div>
+    <div class="row cart-container">
         <div class="col-4">
           <div class="list-group" id="list-tab" role="tablist">
-            <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home"><img class="itemPic" src="images/cold_brew.png">Cold Brew</a>
-            <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="list-profile"><img class="itemPic" src="images/bacon_sandwitch.png"> Bacon, Egg & Cheddar Croissant</a>
+            <a class="list-group-item list-group-item-action active itemName" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home"><img class="itemPic" src="images/cold_brew.png">Cold Brew</a>
+            <a class="list-group-item list-group-item-action itemName" id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="list-profile"><img class="itemPic" src="images/bacon_sandwitch.png"> Bacon, Egg & Cheddar Croissant</a>
           </div>
         </div>
         <div class="col-8">
@@ -31,16 +33,16 @@
               <div><p>We're proud to offer a cold brew with our signature High-Altitude Roasted beans brewed over twelve hours, resulting in a smooth, full-bodied tast with hints of cocoa and caramel.</p>
               </div>
               <div class="grid-container">
-                <div class="itemLabel"><h5>Size</h5>
+                <div class="itemLabel"><h6>Size</h6>
                 </div>
                 <div class="options"><p>12oz $2.50</p></div>
-                <div class="itemLabel"><h5>Extra Espresso Shots</h5>
-                    <p>Optional</p>
+                <div class="itemLabel"><h6>Extra Espresso Shots</h6>
+                    <p class="small-text">Optional</p>
                 </div>
                 <div class="options">
                   <input type="checkbox" id="splash-soy" class="checkbox" name="splash-soy" value="splash-soy"><label for="splash-soy">X-Shot Espresso</label></div>
-                <div class="itemLabel"><h5>Milk Splash Options</h5>
-                <p>Optional- Select up to 4</p>
+                <div class="itemLabel"><h6>Milk Splash Options</h6>
+                <p class="small-text">Optional- Select up to 4</p>
                 </div>
                 <div class="options">
                   <div class="options-grid">
@@ -57,7 +59,7 @@
                   <div><input type="checkbox" id="splash-whole" class="checkbox" name="splash-whole" value="splash-whole"><label for="splash-whole">Splash Whole Milk</label></div>
                 </div>
                 </div>
-                <div class="itemLabel"><h5>Add Sugar</h5></div>
+                <div class="itemLabel"><h6>Add Sugar</h6><p class="small-text">Optional</p></div>
                 <div class="options">
                   <div class="options-grid">
                   <p>Splenda</p>
@@ -74,6 +76,7 @@
           </div>
         </div>
       </div>
+      </section>
    
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
