--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
               <h5>Cold Brew</h5></a>
             <a class="list-group-item list-group-item-action itemName" id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="list-profile"><img class="itemPic" src="images/bacon_sandwitch.png"><h5>Bacon, Egg & Cheddar Croissant</h5></a>
           </div>
+          <div class="prices"><span>Subtotal:      $9.60</span>
+            <p>Tax: $0.58</p><span>
+            <h4>Total: $10.8</h4>
+          </div>
         </div>
         <!--Right side of the page: Cold Brew Options-->
         <div class="col-8">
@@ -124,6 +128,7 @@
           </div>
         </div>
       </div>
+      <button class="checkout-btn">Proceed to Checkout- $10.18</button>
       </section>
    
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
