--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                    <label class="form-check-label" for="flexRadioDefault1">
                     32oz | 0 Cal <span class="option-price">$4.85</span></label>
                  </div>
-
                 </div>
+                <div class="line"></div>
                 <div class="itemLabel"><h6>Extra Espresso Shots</h6>
                     <p class="small-text">Optional</p>
                 </div>
@@ -85,6 +85,7 @@
                   <input class="form-check-input" type="checkbox" value="x-espresso" id="x-espresso">
                   <label class="form-check-label" for="x-espresso">X Espresso Shot <span class="option-price">$0.90</span></label>
                 </div>
+                <div class="line"></div>
                 <div class="itemLabel"><h6>Milk Splash Options</h6>
                 <p class="small-text">Optional- Select up to 4</p>
                 </div>
@@ -124,6 +125,7 @@
                     </div>
                 </div>
                 </div>
+                <div class="line"></div>
                 <div class="itemLabel"><h6>Add Sugar</h6><p class="small-text">Optional</p></div>
                 <div class="options">
                   <div class="options-grid">
